#15756 adjust position of pre-release text

--- a/src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
+++ b/src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
@@ -284,8 +284,9 @@
 }
 
 .extension-editor > .header > .details > .pre-release-text:not(:empty){
-	margin-top: 10px;
+	margin-top: 5px;
 	display: flex;
+	font-size: 90%;
 }
 
 .extension-editor > .header > .details > .recommendation {
